# orthodox-church-website

./: .gitignore  pyproject.toml  readme.md  requirements.txt
church_website/: Makefile
church_website/about/: urls.py  views.py
church_website/about/templates/: clergy.html  contacts.html  donation.html
church_website/blog/: admin.py  models.py  urls.py  views.py
church_website/blog/migrations/: 0001_initial.py  0002_alter_post_options_remove_post_text_post_content_and_more.py  0003_alter_post_options_alter_tag_options_post_tags.py  0004_remove_tag_post_alter_post_tags.py  0005_post_description.py  0006_tag_posts.py  0007_remove_tag_posts.py  0008_alter_post_tags_alter_tag_tag.py
church_website/church_website/: urls.py  wsgi.py  wsgi_local.py  wsgi_pro.py
church_website/gallery/: admin.py  forms.py  handlers.py  models.py  urls.py  views.py
church_website/gallery/templates/: list.html  (+5 more)
church_website/homepage/: urls.py  views.py
church_website/loadstatic/: srcws_style.css  srcws_style.css.map  srcws_style.scss  srcws_style_admin_panel.css  srcws_style_admin_panel.css.map  srcws_style_admin_panel.scss  srcws_style_blog.css  srcws_style_blog.css.map  srcws_style_blog.scss  srcws_style_gallery.css  srcws_style_gallery.css.map  srcws_style_gallery.scss  srcws_style_home.css  srcws_style_home.css.map  srcws_style_home.scss
church_website/reading/: forms.py  handlers.py  models.py  urls.py  views.py
church_website/schedule/: forms.py  handlers.py  models.py  urls.py  views.py
church_website/search/: urls.py  views.py
church_website/template/: index.html
(+38 files in other folders)
